--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+good_lp = { version = "1.14", features = ["all_default_solvers"] }
 
 [dev-dependencies]
 criterion = "0.8"
 
 [[bench]]
-name = "day9"
+name = "day10"
 harness = false
