--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,12 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-good_lp = { version = "1.14", features = ["all_default_solvers"] }
+# good_lp = { version = "1.14", features = ["all_default_solvers"] }
+cached = "0.56"
 
 [dev-dependencies]
 criterion = "0.8"
 
 [[bench]]
-name = "day10"
+name = "day11"
 harness = false
