--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,11 @@ edition = "2024"
 [dependencies]
 # good_lp = { version = "1.14", features = ["all_default_solvers"] }
 cached = "0.56"
+rayon = "1.11"
 
 [dev-dependencies]
 criterion = "0.8"
 
 [[bench]]
-name = "day11"
+name = "day12"
 harness = false
